2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * pass expected type to the creation of E_stdConv and set its type
          field right
        * works: E_stdConv and the wrapped expression point now to
          different types

2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * error messages for implicit conversions

2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix default non-initialization

2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * restructured DC_S_DECL code, changed constructor calls: now
          without assignment

2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix local external declarations

2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix theory name
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * multiple local variable declarations
        * no asserts any more on sync_master
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * pass location to declaration_fun and give an error at the next assert
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * fix importings, indentation
        * output expressions for static casts
        * fix static cast order
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Semantic
        * static casts
        
2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix name_of_function

        ast_graph
        * option -hide-types hides all type nodes

        CFG
        * option -ids adds node ids in dot

        Semantic
        * a few more orientation comments
        * print function info in the generated pvs

2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix byte-code compilation in various dirs
        * put a generic string_of_location in olmar/util/more_string

        Semantic: